--- a/styles/dateslider.css
+++ b/styles/dateslider.css
@@ -1,5 +1,6 @@
 .slider-container {
     background-color: #c2c5cc;
+    position: relative;
 }
 
 .slider {
@@ -10,6 +11,7 @@
     width: 58px;
     top: 0px;
     cursor: move;
+    left: 0px;
     /*margin:-0.5px;*/
 }
 
@@ -56,7 +58,7 @@
 #slider-container {
     position: relative;
     height:30px;
-    background-color: #c2c5cc;     
+    background-color: #eeeef5;
 }
 #range-label {
     font-size: 12px;
