tooltip-and-cleanup

--- a/styles/design.css
+++ b/styles/design.css
@@ -13,20 +13,21 @@
   margin-top: 1.5%; 
 }
 
-#hoverTarget{
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-left: 3%;
-}
-
 .tooltip{
 	position: absolute;
 	z-index: 10;
-	background: lightsteelblue;
+	background-color:rgba(0,0,0,0.85);
+	color:#fff;
+/*	background: lightsteelblue; */	
 	border: solid 1px;
-	padding: 2px;
+/*	padding: 2px;*/
+	padding: 5px;
 	cursor: default;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    border-radius:10px;
 }
+
 #loader {
 	position: absolute;
 	left: 50%;
