--- a/styles/dateslider.css
+++ b/styles/dateslider.css
@@ -10,7 +10,7 @@
     border: 1px solid rgb(2, 2, 2);
     background: #BCE;
     height: 100%;
-    width: 58px;
+    width: 100%;
     top: 0px;
     cursor: move;
     left: 0px;
