Styled some shit

--- a/styles/design.css
+++ b/styles/design.css
@@ -140,8 +140,94 @@ stroke: steelblue;
 }
 #cat {
 	width: 100%;
+	margin-top: 20px;
 }
 g {
 	stroke: black;
 	stroke-width:0.3px;
+}
+
+
+h2{
+	font-weight: 200 !important;
+	font-size: 20px !important;
+	margin-bottom: 2px !important;
+}
+
+#selectedValue{
+	opacity: 1 !important;
+}
+
+
+
+
+/* * /
+
+
+/* Customize the label (the container) */
+.checkboxDiv {
+  /*display: block;*/
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 19px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkboxDiv input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.checkboxDiv:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkboxDiv input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkboxDiv input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkboxDiv .checkmark:after {
+  left: 8px;
+  top: 1px;
+  width: 9px;
+  height: 19px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
