--- a/styles/design.css
+++ b/styles/design.css
@@ -94,6 +94,12 @@
 	stroke-width: 3;
 }
 
+.hover-line {
+  stroke: #6F257F;
+  stroke-width: 2px;
+  stroke-dasharray: 3,3;
+}
+
 .overlay {
 fill: none;
 pointer-events: all;
