--- a/styles/design.css
+++ b/styles/design.css
@@ -77,7 +77,9 @@
 	display: none;
 	text-align: center;
 }
-
+#countyContainer{
+	padding-right: 10%;
+}
 .county-text {
 	cursor: default;
 }
@@ -238,4 +240,9 @@ h2{
 }
 #modalbtn:hover {
 	opacity: 1;
+}
+#mapHeader {
+	text-align:center;
+	margin-bottom: 3%;
+	padding-right: 10%;
 }
